--- a/HelpDesk/Views/Shared/RiwayatLK.cshtml
+++ b/HelpDesk/Views/Shared/RiwayatLK.cshtml
@@ -219,7 +219,9 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in @data)
+            @if(data != null)
+            {
+            foreach (var item in @data)
             {
             <tr>
 
@@ -236,7 +238,8 @@
 
 
             </tr>
-       }
+                }
+            }
         </tbody>
     </table>
 </div>
